# studious-meme-inknote

./: .gitignore  .pre-commit-config.yaml  InkNote.spec  installer.iss  pyproject.toml  version.txt
.github/workflows/: build-windows.yml
src/inknote/: __init__.py  _version.py  app.py  fileops.py  main.py  search.py  settings.py  themes.py  updater.py
tests/: test_fileops.py  test_search.py  test_settings.py  test_themes.py
