[tool.poetry]
name = "inknote"
version = "0.1.0"
description = "InkNote - A lighweight Windows text editor"
authors = ["Kenneth Chua <kennethchua474@gmail.com>"]
readme = "README.md"
packages = [{ include = "inknote", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
ttkbootstrap = "^1.20.1"
requests = "^2.33.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
ruff = "^0.14.8"
mypy = "^1.19.1"
bandit = "^1.9.2"
pre-commit = "^4.5.0"
pyinstaller = "^6.18.0"
pytest-mypy = "^1.0.1"
types-requests = "^2.33.0.20260408"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true

mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*", "ttkbootstrap.*", "requests"]
ignore_missing_imports = true

[tool.bandit]
skips = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
inknote = "inknote.main:main"
